# FirstFFmpeg

./: av_log.txt
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/javine/firstffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: log_util.h  native-lib.cpp
app/src/main/java/com/example/javine/firstffmpeg/: DecodeActivity.java  JniHelper.java  MainActivity.java
app/src/main/res/layout/: activity_decode.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/javine/firstffmpeg/: ExampleUnitTest.java
distribution/ffmpeg/include/libavutil/: ffversion.h
gradle/wrapper/: gradle-wrapper.properties
